--- a/src/components/style.css
+++ b/src/components/style.css
@@ -88,3 +88,37 @@ button {
 button:active {
   background: whitesmoke;
 }
+
+.quote-container {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  padding: 20px;
+  font-size: 18px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: 400px;
+  font-weight: 400;
+  height: 300px;
+}
+
+.quote-container h1 {
+  padding: 0;
+  margin: 20px;
+}
+
+.loading {
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 800;
+  font-size: 24px;
+  padding: 20px;
+}
+
+.quote {
+  color: b;
+}
+
+.author {
+  display: flex;
+  justify-content: end;
+  font-weight: 900;
+}
