--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,7 +1,12 @@
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
+
 .container {
   display: flex;
-  width: 90vw;
-  height: 90vh;
   justify-content: center;
   align-items: center;
 }
@@ -93,7 +98,7 @@ button:active {
   display: flex;
   justify-content: start;
   flex-direction: column;
-  padding: 20px;
+  padding-top: 120px;
   font-size: 18px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   width: 400px;
@@ -111,6 +116,7 @@ button:active {
   font-weight: 800;
   font-size: 24px;
   padding: 20px;
+  margin-top: 200px;
 }
 
 .quote {
